--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,74 @@
+@keyframes logoAnimation {
+  from {
+    width: 25px;
+    opacity: 0;
+  }
+  to {
+    width: 475px;
+    opacity: 1;
+  }
+}
+
+#logo {
+  width: 475px;
+  animation: logoAnimation 5s;
+  margin: auto;
+}
+
+body {
+  font-family: "Poppins", serif;
+  background-image: url("images/concrete_seamless.png");
+  background-color: #f1f1f1;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+}
+.nav_links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+a,
+a:visited {
+  color: blue;
+}
+
+.card > header {
+  background-color: #288088;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  border: 2px solid #45adad;
+  padding: 20px 0;
+}
+
 .card {
   flex-basis: 450px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  max-width: 60%;
 }
 
 .pricing {
   display: flex;
-  flex-wrap: row wrap;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.gallery img {
+  border: 10px solid #50c7c7;
+  margin: 10px;
+  width: 300px;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 900px) {
@@ -14,12 +77,20 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    align-items: center;
+  }
+
+  #logo {
+    margin: 0px;
+  }
+  body > header {
+    position: sticky;
+    top: 0;
   }
 
   .nav_links {
     flex-direction: row;
   }
-
   /* step 12 */
 
   .card {
@@ -27,12 +98,44 @@
   }
 
   .pricing {
+    display: flex;
     align-items: center;
+    flex-direction: row;
   }
 }
 
 @media all and (prefers-reduced-motion: reduce) {
+  #logo {
+    animation: none;
+  }
 }
 
 @media print {
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: none;
+  }
+  .nav_links {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+
+  .pricing {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row;
+  }
+  .card {
+    border: 2px solid #45addd;
+    flex-basis: 325px;
+  }
+  .card ul li:nth-child(2)::after {
+    content: "👍";
+    margin-right: 5px;
+  }
+  #gallery,
+  .gallery {
+    display: none;
+  }
 }
