--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* step 1 */
 @keyframes logoAnimation {
   from {
     width: 25px;
@@ -15,27 +16,31 @@
   margin: auto;
 }
 
+/* step 2 */
 body {
   font-family: "Poppins", serif;
   background-image: url("images/concrete_seamless.png");
   background-color: #f1f1f1;
 }
-
+/* step 3 */
 header {
   display: flex;
   flex-direction: column;
 }
+/* step 4 */
 .nav_links {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+/* step 5 */
 a,
 a:visited {
   color: blue;
 }
 
+/* step 6 */
 .card > header {
   background-color: #288088;
   border-top-left-radius: 50px;
@@ -44,6 +49,7 @@ a:visited {
   padding: 20px 0;
 }
 
+/* step 7 */
 .card {
   flex-basis: 450px;
   border-top-left-radius: 50px;
@@ -51,6 +57,7 @@ a:visited {
   max-width: 60%;
 }
 
+/* step 8 */
 .pricing {
   display: flex;
   flex-direction: column;
@@ -58,12 +65,14 @@ a:visited {
   align-items: center;
 }
 
+/* step 9 */
 .gallery img {
   border: 10px solid #50c7c7;
   margin: 10px;
   width: 300px;
 }
 
+/* step 10 */
 .gallery {
   display: flex;
   justify-content: center;
@@ -83,6 +92,7 @@ a:visited {
   #logo {
     margin: 0px;
   }
+  /* step 13 */
   body > header {
     position: sticky;
     top: 0;
@@ -92,7 +102,6 @@ a:visited {
     flex-direction: row;
   }
   /* step 12 */
-
   .card {
     flex-basis: 275px;
   }
@@ -103,7 +112,7 @@ a:visited {
     flex-direction: row;
   }
 }
-
+/* step 14 */
 @media all and (prefers-reduced-motion: reduce) {
   #logo {
     animation: none;
@@ -112,28 +121,34 @@ a:visited {
 
 @media print {
   body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: none;
+    font-family: Arial, Helvetica, sans-serif; /* step 15 */
+    background-image: none; /* step 16 */
   }
+
+  /* step 17 */
   .nav_links {
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
   }
-
+  /* step 18 */
   .pricing {
     display: flex;
     align-items: flex-end;
     flex-direction: row;
   }
+  /* step 19 */
   .card {
     border: 2px solid #45addd;
     flex-basis: 325px;
   }
+  /* step 21 */
   .card ul li:nth-child(2)::after {
     content: "👍";
     margin-right: 5px;
   }
+
+  /* step 20 */
   #gallery,
   .gallery {
     display: none;
